# BinauralPlayerDynamic

./: .gitignore  BinauralPlayer.desktop  CHANGELOG.md.save  CMakeLists.txt  README.md  ambientplayer.cpp  ambientplayer.h  ambientplayerdialog.cpp  ambientplayerdialog.h  binauralengine.cpp  binauralengine.h  constants.cpp  constants.h  dynamicengine.cpp  dynamicengine.h  helpmenudialog.cpp  io.github.alamahant.BinauralPlayer.desktop  io.github.alamahant.BinauralPlayer.metainfo.xml  io.github.alamahant.BinauralPlayer.yml  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
files/: AmbientNatureSounds.txt  FrequencyList.txt  MUSIC.txt  README.txt
